# airtame-cli

./: CMakeLists.txt  README.md  project.config
src/: CMakeLists.txt  channel.c  main.c  ssdp.c
